force-app/main/default/objects/UserManagement__c/UserManagement__c.object-meta.xml
<CustomObject>
    <description>B2B平台使用者帳號</description>
    <label>User Management</label>
    <nameField>
        <displayFormat>JX{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>