force-app/main/default/objects/UserManagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>請輸入至少8個字元，且僅限英文字、數字、特殊字元</inlineHelpText>
    <label>Account</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>