force-app/main/default/objects/UserManagement__c/fields/CN_Passport__c.field-meta.xml
<CustomField>
    <fullName>CN_Passport__c</fullName>
    <label>Chinese Passport</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>