force-app/main/default/objects/UserManagement__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Managements</relationshipLabel>
    <relationshipName>Company_Managements</relationshipName>
    <type>Lookup</type>
</CustomField>