force-app/main/default/objects/UserManagement__c/fields/Createdby__c.field-meta.xml
<CustomField>
    <fullName>Createdby__c</fullName>
    <description>由B2B系統寫入，需要紀錄由哪一位使用者新增領隊/導遊帳號</description>
    <inlineHelpText>由B2B系統寫入，需要紀錄由哪一位使用者新增領隊/導遊帳號</inlineHelpText>
    <label>Created by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>