force-app/main/default/objects/UserManagement__c/fields/EmailMemo1__c.field-meta.xml
<CustomField>
    <fullName>EmailMemo1__c</fullName>
    <label>EmailMemo1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>