force-app/main/default/objects/UserManagement__c/fields/EmailMemo2__c.field-meta.xml
<CustomField>
    <fullName>EmailMemo2__c</fullName>
    <label>EmailMemo2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>