force-app/main/default/objects/UserManagement__c/fields/EmailMemo3__c.field-meta.xml
<CustomField>
    <fullName>EmailMemo3__c</fullName>
    <label>EmailMemo3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>