force-app/main/default/objects/UserManagement__c/fields/EN_Passport__c.field-meta.xml
<CustomField>
    <fullName>EN_Passport__c</fullName>
    <label>English Passport</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>