force-app/main/default/objects/UserManagement__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <description>密碼到期日</description>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>