force-app/main/default/objects/UserManagement__c/fields/IATA_MSO_Code__c.field-meta.xml
<CustomField>
    <fullName>IATA_MSO_Code__c</fullName>
    <formula>Company__r.IATA_MSO_Code__c</formula>
    <label>IATA Code</label>
    <type>Text</type>
</CustomField>