force-app/main/default/objects/UserManagement__c/fields/LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedBy__c</fullName>
    <description>由B2B系統寫入，需要紀錄由哪一位使用者編輯領隊/導遊帳號</description>
    <inlineHelpText>由B2B系統寫入，需要紀錄由哪一位使用者編輯領隊/導遊帳號</inlineHelpText>
    <label>Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>