force-app/main/default/objects/UserManagement__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>目前接收最新的Email連結(主要用於註冊帳號)</description>
    <label>Link</label>
    <type>Url</type>
</CustomField>