force-app/main/default/objects/UserManagement__c/fields/Password3__c.field-meta.xml
<CustomField>
    <fullName>Password3__c</fullName>
    <description>紀錄之前的變更密碼</description>
    <inlineHelpText>紀錄之前的變更密碼</inlineHelpText>
    <label>第三組密碼</label>
    <length>255</length>
    <type>Text</type>
</CustomField>