force-app/main/default/objects/UserManagement__c/fields/Password4__c.field-meta.xml
<CustomField>
    <fullName>Password4__c</fullName>
    <description>紀錄之前的變更密碼</description>
    <inlineHelpText>紀錄之前的變更密碼</inlineHelpText>
    <label>第四組密碼</label>
    <length>255</length>
    <type>Text</type>
</CustomField>