force-app/main/default/objects/UserManagement__c/fields/Phone1__c.field-meta.xml
<CustomField>
    <fullName>Phone1__c</fullName>
    <inlineHelpText>請入電話號碼 (例如 : 912345678)</inlineHelpText>
    <label>Phone number (Domestic)</label>
    <type>Phone</type>
</CustomField>