force-app/main/default/objects/UserManagement__c/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <label>Phone number (Overseas)</label>
    <type>Phone</type>
</CustomField>