force-app/main/default/objects/UserManagement__c/fields/Prefix1__c.field-meta.xml
<CustomField>
    <fullName>Prefix1__c</fullName>
    <defaultValue>&quot;+886&quot;</defaultValue>
    <label>Country code (Domestic)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>