force-app/main/default/objects/UserManagement__c/fields/Prefix2__c.field-meta.xml
<CustomField>
    <fullName>Prefix2__c</fullName>
    <defaultValue>&quot;+86&quot;</defaultValue>
    <inlineHelpText>Please enter your phone number in international format, starting with country code +86. Example: +86、+81.</inlineHelpText>
    <label>Country code (Overseas)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>