force-app/main/default/objects/UserManagement__c/fields/Resend__c.field-meta.xml
<CustomField>
    <fullName>Resend__c</fullName>
    <defaultValue>true</defaultValue>
    <description>勾選觸發產生帳號驗證連結並寄信</description>
    <inlineHelpText>勾選觸發產生帳號驗證連結並寄信</inlineHelpText>
    <label>Resend</label>
    <type>Checkbox</type>
</CustomField>