force-app/main/default/objects/UserManagement__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>角色權限</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>管理者</label>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>領隊/導遊/OP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>