force-app/main/default/objects/UserManagement__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>美加線</fullName>
            </value>
            <value>
                <fullName>東南亞線</fullName>
            </value>
            <value>
                <fullName>歐洲線</fullName>
            </value>
            <value>
                <fullName>東北亞線</fullName>
            </value>
            <value>
                <fullName>港澳線</fullName>
            </value>
            <value>
                <fullName>中國線</fullName>
            </value>
            <value>
                <fullName>包機</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>