force-app/main/default/objects/UserManagement__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>先生</fullName>
            </value>
            <value>
                <fullName>女士</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>