force-app/main/default/objects/UserManagement__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>帳號狀態</description>
    <formula>IF(Verify__c=FALSE,&quot;未開通&quot;,(
IF(ExpireDate__c &gt;=TODAY(),&quot;已開通&quot;,&quot;密碼逾期&quot;)))</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>