force-app/main/default/objects/UserManagement__c/fields/Taxid__c.field-meta.xml
<CustomField>
    <fullName>Taxid__c</fullName>
    <formula>Company__r.Business_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxid</label>
    <type>Text</type>
</CustomField>