force-app/main/default/objects/UserManagement__c/fields/Verify__c.field-meta.xml
<CustomField>
    <fullName>Verify__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EMAIL寄送成功</description>
    <label>Verify</label>
    <type>Checkbox</type>
</CustomField>