force-app/main/default/objects/UserManagement__c/validationRules/ckAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>ckAccount</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    LEN(Account__c) &lt; 8,
    NOT(REGEX(Account__c, &quot;^[a-zA-Z0-9!@#$%^&amp;*()_+\\-=\\[\\]{};&apos;:\&quot;\\\\|,.&lt;&gt;\\/?~`]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>請輸入至少8個字元，且僅限英文字、數字、特殊字元</errorMessage>
</ValidationRule>