force-app/main/default/objects/UserManagement__c/validationRules/ckChinesePassport.validationRule-meta.xml
<ValidationRule>
    <fullName>ckChinesePassport</fullName>
    <active>true</active>
    <description>僅中文字</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(CN_Passport__c )),
    NOT(ISNUMBER(CN_Passport__c )),
    LEN(CN_Passport__c ) &lt;&gt; LEN(SUBSTITUTE(CN_Passport__c , &quot; &quot;, &quot;&quot;))
)</errorConditionFormula>
    <errorDisplayField>CN_Passport__c</errorDisplayField>
    <errorMessage>僅中文字</errorMessage>
</ValidationRule>