force-app/main/default/objects/UserManagement__c/validationRules/ckPassword2.validationRule-meta.xml
<ValidationRule>
    <fullName>ckPassword2</fullName>
    <active>true</active>
    <description>密碼至少需10字元，且須包含特殊符號、大寫、小寫、數字、特殊符號</description>
    <errorConditionFormula>OR(
  LEN(Password__c) &lt; 10,
  NOT(REGEX(Password__c, &quot;.*[A-Z].*&quot;)),        
  NOT(REGEX(Password__c, &quot;.*[a-z].*&quot;)),        
  NOT(REGEX(Password__c, &quot;.*[0-9].*&quot;)),       
  NOT(REGEX(Password__c, &quot;.*[!@#$%^&amp;*(),.?\&quot;:{}|&lt;&gt;~`_+=\\[\\];&apos;\\-\\/\\\\].*&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>密碼須至少 10 字元，且需同時包含大寫字母、小寫字母、數字及特殊符號。</errorMessage>
</ValidationRule>